tests/ui/macros/undefined-macro-in-impl.stderr
error: cannot find macro `undef` in this scope
  --> $DIR/undefined-macro-in-impl.rs:7:5
   |
LL |     undef!();
   |     ^^^^^

error: aborting due to 1 previous error

